--- a/file-control/src/App.scss
+++ b/file-control/src/App.scss
@@ -35,6 +35,6 @@
 .main-container {
   background: "#fff";
   min-height: 280;
-  height: "calc(100vh - 112px)";
+  height: calc(100vh - 112px);
   overflow: "auto";
 }
