--- a/file-control/src/component/messageBox/messageBox.scss
+++ b/file-control/src/component/messageBox/messageBox.scss
@@ -31,6 +31,8 @@
     display:flex;
     align-items: center;
     border-radius: 5px;
+    padding: 0.5rem;
+    font-size: 1rem;
     &.second{
         background:#f0f2f5;
     }
